[project]
name = "pubmed-fetcher_geetha"
version = "0.1.1"
description = "Fetch research papers from PubMed"
authors = [
    {name = "geetharuttala", email = "geetharuttala0106@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)",
    "biopython (>=1.85,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "pubmed_fetcher", from = "src"}]

[project.scripts]
get-papers-list = "pubmed_fetcher.cli:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
